--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,16 @@ body {
 }
 
 main {
-  background: url(../images/background.svg);
-  background-position: center;
-  width: 375px;
-  height: 812px;
+  background: url(../images/background.svg) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vw;
 }
 .container {
   max-width: 250px;
   margin: 0 auto;
   text-align: center;
-
+  max-height: 812px;
   color: var(--grey);
 }
 
